Completed RPS game without GUI

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Rock, Paper Scissors!</title>
 </head>
 <body>
-    
+    <script>
+        result = +window.prompt("How many games do you want to play?");
+        game(result);
+    </script>
 </body>
 </html>
