updated game to use mouse clicks

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Rock, Paper Scissors!</title>
 </head>
 <body>
-    <script>
-        result = +window.prompt("How many games do you want to play?");
-        game(result);
-    </script>
+    <div class="buttons">
+        <button class="button" id="rock">Rock</button>
+        <button class="button" id="paper">Paper</button>
+        <button class="button" id="scissors">Scissors</button>
+    </div>
+    <div class="output">
+    </div>
 </body>
 </html>
