added a clear and reset button

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <title>Rock, Paper Scissors!</title>
 </head>
 <body>
+    <h2>Your move</h2>
     <div class="buttons">
-        <button class="button" id="rock">Rock</button>
-        <button class="button" id="paper">Paper</button>
-        <button class="button" id="scissors">Scissors</button>
+        <button class="button" id="rock" title="Play rock!">Rock</button>
+        <button class="button" id="paper" title="Play paper!">Paper</button>
+        <button class="button" id="scissors" title="Play scissors!">Scissors</button>
+        
     </div>
+    <p><button class="button" id="clear" title="Clear the display area!">Clear</button><button class="button" id="reset" title="Resets game statistics.">Reset</button></p>
+    <h2>Results</h2>
     <div class="output">
+        
     </div>
 </body>
 </html>
